# DualTreeRRTStartMotionPlanning

./: LICENSE  README.md  bitreequad.env.xml  windowd.env.xml
data/: HW2_astar.py  hw3.env.xml  quadrotor_base.dae  quadrotor_base.xml  test.py
data/Untitled Folder/: quadrotor_hokuyo_utm30lx.dae  quadrotor_hokuyo_utm30lx.xml
data/wt/: CMakeLists.txt  HW3_birrt.py  bitreequad.env.xml  hw3.env.xml  myRRT.cpp  myRRT.h
data/wt/env/: bitreequad.env.xml  quadrotor.robot.xml
data/wt/myplugin/: myplugin.cpp  testplugin.py
paperVersion/: DrawLocalPath.py  Dropped Text 2.txt  Dropped Text.txt  NaroCheck.py  TestController.py  TestUpdateFunction.py  pureQ.py  pureQBackup.py  pureQMakeVideo.py  test.py  timestamped.py  transformationFunction.py  userdefined.py  userdefinedTest.py  zhsu.py  zhsu1.py
paperVersion/env/: bitreequadmulitirobots.env.xml  bitreequadmulitirobotsTwoWins.env.xml  hw3.env.xml  quadrotor_base.dae
paperVersion/env/backup/: bitreequad.env.xml
paperVersion/noForcePass/: HW3_tryPythonPureQ.py  userdefined.py
paperVersion/used/: HW3_tryPythonQE.py
python/: HW3_tryPythonQE.py  SimpleConnection.py  userdefined.py
python/env/: bitreequad2.env.xml
pythonVision2/: HW3_testUpdateFunction.py  HW3_tryPythonE.py  HW3_tryPythonPureQ.py  HW3_tryPythonQ.py  PseudoCodeDualTreeRRT.py  test.py  userdefined.py
pythonVision2/env/: bitreequad.env.xml  bitreequad2.env.xml  pole.env.xml  window0.env.xml  window15.env.xml  window30.env.xml  window45.env.xml  window60.env.xml  window75.env.xml  window90.env.xml
